// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseButton should match snapshot with props 1`] = `
<button
  alt="alternate text"
  class="text-lg primary flex items-center justify-center"
  size="large"
  type="submit"
>
  <!---->
   
  <!---->
   Button Text 
  <!---->
</button>
`;

exports[`BaseButton should render correctly and match snapshot 1`] = `
<button
  class="flex items-center justify-center"
  type="submit"
>
  <!---->
   
  <!---->
    
  <!---->
</button>
`;
